--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tacticool in</title>
 </head>
-<body class="container-fluid px-0">
+<body>
   
   <div id="app"></div>
 
