--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -1,4 +1,5 @@
- // import bootstrap.scss file
- // @import '~bootstrap/scss/bootstrap.scss';
-
- @import "./overrides"
+/* purgecss start ignore */
+@tailwind base;
+@tailwind components;
+/* purgecss end ignore */
+@tailwind utilities;
