style(*): polish header and navs

--- a/src/components/core/UserMenu/UserMenu.scss
+++ b/src/components/core/UserMenu/UserMenu.scss
@@ -1,15 +1,7 @@
-@import '~styles/functions/px-to-rem';
-@import '~styles/mixins';
-@import '~styles/variables';
-
 .user-menu {
-  @apply flex items-center px-4;
+  @apply absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0;
+}
 
-  @include element(cart-icon) {
-    @apply flex items-center;
-  }
-
-  @include element(cart-quantity) {
-    @apply ml-2;
-  }
+.user-menu__button {
+  @apply bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white;
 }
