--- a/src/components/core/UserMenu/UserMenu.scss
+++ b/src/components/core/UserMenu/UserMenu.scss
@@ -1,7 +1,25 @@
 .user-menu {
-  @apply absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0;
+  @apply absolute
+    flex
+    inset-y-0
+    items-center
+    pr-2
+    right-0
+    sm:inset-auto
+    sm:ml-6
+    sm:pr-0
+    sm:static;
 }
 
 .user-menu__button {
-  @apply bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white;
+  @apply bg-gray-800
+    focus:outline-none
+    focus:ring-2
+    focus:ring-offset-2
+    focus:ring-offset-gray-800
+    focus:ring-white
+    hover:text-white
+    p-1
+    rounded-full
+    text-gray-400;
 }
