--- a/src/components/pages/Home/Home.scss
+++ b/src/components/pages/Home/Home.scss
@@ -3,7 +3,6 @@
 @import '~styles/variables';
 
 .home {
-
   @include element(title) {
     text-align: center;
     margin: px-to-rem(10) 0;
@@ -12,7 +11,6 @@
   @include element(loader) {
     align-items: center;
     display: flex;
-    justify-content: center
+    justify-content: center;
   }
-
 }
