--- a/src/components/pages/Auth/Auth.css
+++ b/src/components/pages/Auth/Auth.css
@@ -1,6 +1,3 @@
-@import '~styles/mixins/media';
-@import '~styles/variables';
-
 .auth {
   align-items: center;
   display: flex;
@@ -8,7 +5,7 @@
   justify-content: center;
   padding-top: 70px;
 
-  @include media($sm) {
+  /* @include media($sm) {
     height: calc(100vh - 288.6px);
-  }
+  } */
 }
