--- a/src/components/base/Spinner/Spinner.css
+++ b/src/components/base/Spinner/Spinner.css
@@ -10,15 +10,15 @@
 .spinner__outer-circle {
   animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
   border-radius: 50%;
-  border: px-to-rem(4) solid #222222;
+  border: 4px solid #222222;
   opacity: 1;
   position: absolute;
 }
 
 @keyframes lds-ripple {
   0% {
-    top: px-to-rem(28);
-    left: px-to-rem(28);
+    top: 28px;
+    left: 28px;
     width: 0;
     height: 0;
     opacity: 1;
@@ -27,8 +27,8 @@
   100% {
     top: -1px;
     left: -1px;
-    width: px-to-rem(58);
-    height: px-to-rem(58);
+    width: 58px;
+    height: 58px;
     opacity: 0;
   }
 }
